--- a/react_calc_imc/src/App.module.css
+++ b/react_calc_imc/src/App.module.css
@@ -6,6 +6,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.main{
+    padding-bottom: 50px;
+}
+
 .headerContainer {
     max-width: 900px;
     margin: 40px auto;
@@ -108,4 +112,37 @@ body {
 
 .rightArrow:hover{
     opacity: .8;
+}
+
+@media(max-width: 770px) {
+    header {
+        padding: 0 20px;
+
+    }
+    .container {
+        padding: 0 20px;
+        flex-direction: column;
+    }
+
+    .leftS {
+        margin-right: 0;
+    }
+
+    .rightS {
+        margin-left: 0;
+        margin-top: 50px;
+    }
+
+    .rightArrow{
+        margin-left: 0;
+        margin-top: 0;
+        border-radius: 10%;
+    }
+
+}
+
+@media(max-width: 380px ){
+    .grid{
+        grid-template-columns: 1fr
+    }
 }
